--- a/educationPortal/public/views/user/instructor/curriculum.instructor.view.client.html
+++ b/educationPortal/public/views/user/instructor/curriculum.instructor.view.client.html
@@ -52,9 +52,9 @@
                     <li><a href="#">General</a></li>
                     <li><a href="#">Aims</a></li>
                     <li><a href="#">Requirements</a></li>
-                    <li class="active"><a href="#">Curriculum <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Instructor</a></li>
-                    <li><a href="#">Reviews</a></li>
+                    <li class="active"><a href="curriculum.instructor.view.client.html">Curriculum <span class="sr-only">(current)</span></a></li>
+                    <li><a href="profile.instructor.view.client.html">Instructor</a></li>
+                    <li><a href="reviews.instructor.view.client.html">Reviews</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -127,6 +127,9 @@
                 </ul>
             </div>
             <div class="col-sm-8 col-xs-12">
+                <div class="col-xs-12 visible-xs">
+                    <h3 class="yw-pageTitle">Curriculum</h3>
+                </div>
                 <label for="chapter">Chapter </label>
                 <input id="chapter"
                        class="form-control"
