--- a/educationPortal/public/views/user/instructor/profile.instructor.view.client.html
+++ b/educationPortal/public/views/user/instructor/profile.instructor.view.client.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Course Editor</a>
+                <a class="navbar-brand" href="#">Course Editor </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,9 +52,9 @@
                     <li><a href="#">General</a></li>
                     <li><a href="#">Aims</a></li>
                     <li><a href="#">Requirements</a></li>
-                    <li class="active"><a href="#">Curriculum <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Instructor</a></li>
-                    <li><a href="#">Reviews</a></li>
+                    <li><a href="curriculum.instructor.view.client.html">Curriculum </a></li>
+                    <li class="active"><a href="profile.instructor.view.client.html">Instructor<span class="sr-only">(current)</span></a></li>
+                    <li><a href="reviews.instructor.view.client.html">Reviews</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -127,6 +127,9 @@
                 </ul>
             </div>
             <div class="col-sm-8 col-xs-12">
+                <div class="col-xs-12 visible-xs">
+                    <h3 class="yw-pageTitle">Instrutor</h3>
+                </div>
                 <label for="name">Name </label>
                 <input id="name"
                        class="form-control"
