--- a/educationPortal/public/views/user/templates/profile.view.client.html
+++ b/educationPortal/public/views/user/templates/profile.view.client.html
@@ -53,7 +53,7 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="password">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" placeholder="Password" id="password" ng-model="model.password1">
+                <input type="password" class="form-control" placeholder="Password" id="password" ng-model="model.password">
             </div>
         </div>
 
