--- a/educationPortal/public/views/course/course-edit/landing.html
+++ b/educationPortal/public/views/course/course-edit/landing.html
@@ -107,7 +107,7 @@
     <!-- /.container -->
 </nav>
 
-    <div class="jumbotron">
+<div class="jumbotron">
         <div class="container">
             <h1>Hello, Faculty!</h1>
             <h4> Welcome to course editing page!</h4>
@@ -115,33 +115,92 @@
         </div>
     </div>
 
-<div class="courses">
 
-    <!-- Project Section -->
-    <div class=container-fluid id="course">
-        <h3>Courses</h3>
-    </div>
+<div class=container-fluid id="course">
+    <h2>
+        Courses
+    </h2>
     <div class="list-courses">
         <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img class="img-responsive" src="http://radiozdk.com/main/wp-content/uploads/2016/09/COMP.jpg">
+            <div>
+                <a href="course-new.html">
+                    <span>Add new course</span>
+                    <img class="img-responsive" src="../../../img/plus%202.png">
+                </a>
             </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img class="img-responsive" src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+            <div>
+                <a href="general.html">
+                    <span>CS5610</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
             </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img class="img-responsive" src="https://www.seokarachi.com/wp-content/uploads/2017/05/Computer-Short-Courses-Pakistan.jpg">
+            <div>
+                <a href="general.html">
+                    <span>CS4510</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
             </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img class="img-responsive" src="http://cdn.yourarticlelibrary.com/wp-content/uploads/2013/12/b846.jpg">
+            <div>
+                <a href="general.html">
+                    <span>IS1500</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
             </div>
         </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div>
+                <a href="general.html">
+                    <span>CS4510</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div>
+                <a href="general.html">
+                    <span>IS1500</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div>
+                <a href="general.html">
+                    <span>CS4510</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div>
+                <a href="general.html">
+                    <span>IS1500</span>
+                    <img class="img-responsive"
+                         src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                </a>
+            </div>
+        </div>
+
+
     </div>
 </div>
 
