--- a/educationPortal/public/views/course/course-edit/requirements-new.html
+++ b/educationPortal/public/views/course/course-edit/requirements-new.html
@@ -124,15 +124,15 @@
 
 
         <div class="col-md-8 ">
-            <label for="LearningAims1">
-                Learning Aims
+            <label for="Requirements">
+                Requirements
             </label>
             <ul class="list-group">
                 <li class="list-group-item no-border">
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                               value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -153,7 +153,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -174,7 +174,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -195,7 +195,8 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value=""
+                                   type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -212,26 +213,12 @@
 
 
                 </li>
-                <li class="list-group-item no-border">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <input class="form-control"
-                                    type="class"
-                                    placeholder="Please add new learning aims for this course">
-                            </input>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-plus   btn btn-primary"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
 
-                    </div>
-
-
-                </li>
             </ul>
-            </div>
+        </div>
+
+
+
     </div>
 </div>
 
