--- a/educationPortal/public/views/course/course-edit/learningaims-new.html
+++ b/educationPortal/public/views/course/course-edit/learningaims-new.html
@@ -66,12 +66,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="requirements.html">
+                            <a href="#">
                                 Requirement
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="requirements.html">
+                            <a href="">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -132,7 +132,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                               value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -153,7 +153,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -174,7 +174,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -195,7 +195,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -212,26 +212,9 @@
 
 
                 </li>
-                <li class="list-group-item no-border">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <input class="form-control"
-                                    type="class"
-                                    placeholder="Please add new learning aims for this course">
-                            </input>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-plus   btn btn-primary"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
 
-                    </div>
-
-
-                </li>
             </ul>
-            </div>
+        </div>
     </div>
 </div>
 
