--- a/educationPortal/public/views/home/home.client.html
+++ b/educationPortal/public/views/home/home.client.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-sm-1 hidden-xs">
             <div class="navbar-header">
-                <a class="navbar-brand btn" href="#">Login</a>
+                <a class="navbar-brand btn" href="#/login">Login</a>
             </div>
         </div>
 
