--- a/educationPortal/public/views/user/templates/login.view.client.html
+++ b/educationPortal/public/views/user/templates/login.view.client.html
@@ -19,14 +19,14 @@
            type="text"
            id="username"
            class="form-control"
-           placeholder="bob123"/>
+           placeholder="Bob Marley"/>
 
     <label for="username">Password</label>
     <input ng-model="model.user.password"
            type="password"
            id="password"
            class="form-control"
-           placeholder="qwer1234zxcv"/>
+           placeholder="******"/>
 
     <a ng-click="model.login(model.user)"
        class="btn btn-primary btn-block">
