--- a/educationPortal/public/views/home/home.client.html
+++ b/educationPortal/public/views/home/home.client.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top ">
     <div class="menubar">
         <div class="col-xs-7 col-sm-4 col-lg-2">
             <div class="navbar-header">
@@ -26,13 +26,13 @@
         </div>
         <div class="col-sm-1 hidden-xs">
             <div class="navbar-header">
-                <a class="navbar-brand btn" href="#/login">Login</a>
+                <a class="navbar-brand " href="#">Login</a>
             </div>
         </div>
 
         <div class="col-sm-1 hidden-xs">
             <div class="navbar-header">
-                <a class="navbar-brand btn" href="#/register">Register</a>
+                <a class="navbar-brand " href="#/register">Register</a>
             </div>
         </div>
 
@@ -43,32 +43,74 @@
     <img class="w3-image" src="http://www.uwinnipeg.ca/indigenous-course-requirement/images/icr-img.jpg">
 </header>
 
-<!-- Page content -->
-<div class="courses">
 
-    <!-- Project Section -->
-    <div class=container-fluid id="course">
+<div class="courses">
+    <div class="container-fluid">
         <h3>Courses</h3>
     </div>
-    <div class="list-courses">
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+
+    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+        <div class="panel panel-info">
+            <div class="panel-body">
                 <img class="img-responsive" src="http://radiozdk.com/main/wp-content/uploads/2016/09/COMP.jpg">
+                <h4 class="course">Web Development 5610</h4>
+                <h5 class="author">Author name</h5>
+                <span class="glyphicon glyphicon-star"></span>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+        <div class="panel panel-info">
+            <div class="panel-body">
                 <img class="img-responsive" src="http://www.softprocomp.com/ding/wp-content/uploads/2015/07/computer-training-courses.png">
+                <h4 class="course">Databases</h4>
+                <h5 class="author">Author name</h5>
+                <span class="glyphicon glyphicon-star"></span>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+        <div class="panel panel-info">
+            <div class="panel-body">
                 <img class="img-responsive" src="https://www.seokarachi.com/wp-content/uploads/2017/05/Computer-Short-Courses-Pakistan.jpg">
+                <h4 class="course">Web Development 4550</h4>
+                <h5 class="author">Author name</h5>
+                <span class="glyphicon glyphicon-star"></span>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+        <div class="panel panel-info">
+            <div class="panel-body">
                 <img class="img-responsive" src="http://cdn.yourarticlelibrary.com/wp-content/uploads/2013/12/b846.jpg">
+                <h4 class="course">Algorithms</h4>
+                <h5 class="author">Author name</h5>
+                <span class="glyphicon glyphicon-star"></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+        <div class="panel panel-info">
+            <div class="panel-body">
+                <img class="img-responsive" src="https://www.seokarachi.com/wp-content/uploads/2017/05/Computer-Short-Courses-Pakistan.jpg">
+                <h4 class="course">Information Retrieval</h4>
+                <h5 class="author">Author name</h5>
+                <span class="glyphicon glyphicon-star"></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+        <div class="panel panel-info">
+            <div class="panel-body">
+                <img class="img-responsive" src="http://cdn.yourarticlelibrary.com/wp-content/uploads/2013/12/b846.jpg">
+                <h4 class="course">Map Reduce</h4>
+                <h5 class="author">Author name</h5>
+                <span class="glyphicon glyphicon-star"></span>
             </div>
         </div>
     </div>
