--- a/educationPortal/public/views/home/home.client.html
+++ b/educationPortal/public/views/home/home.client.html
@@ -26,13 +26,13 @@
         </div>
         <div class="col-sm-1 hidden-xs">
             <div class="navbar-header">
-                <a class="navbar-brand " href="#">Login</a>
+                <a class="navbar-brand" href="#/login">Login</a>
             </div>
         </div>
 
         <div class="col-sm-1 hidden-xs">
             <div class="navbar-header">
-                <a class="navbar-brand " href="#/register">Register</a>
+                <a class="navbar-brand" href="#/register">Register</a>
             </div>
         </div>
 
