changed course landing page to jumbotron based custom theme, with expandable  topics in curriculum

--- a/educationPortal/public/views/course/course.view.html
+++ b/educationPortal/public/views/course/course.view.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +14,7 @@
     <link href="../../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../../css/course-landing.css" rel="stylesheet">
+    <link href="../../css/course-landing/course-landing.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -107,7 +106,7 @@
             <div class="col-lg-4">
                 <h2 class="section-heading">Requirements</h2>
                 <p class="lead">
-                    Pre-requisite courses:<br>
+                    Prerequisite courses:<br>
                     Textbooks:
                 </p>
             </div>
@@ -212,10 +211,10 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="../../js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="../../js/bootstrap.min.js"></script>
 
 </body>
 
