--- a/public/css/course-landing/course-landing.css
+++ b/public/css/course-landing/course-landing.css
@@ -181,13 +181,13 @@ body {
     margin-bottom: 60px;
 }
 
-.navbar-default {
-    background-color: lightgray;
-}
+/*.navbar-default {*/
+    /*background-color: lightgray;*/
+/*}*/
 
-.navbar-default .navbar-brand {
-    color: white;
-}
+/*.navbar-default .navbar-brand {*/
+    /*color: white;*/
+/*}*/
 
 .learning-objectives_content{
     margin-left: 75px;
