Add service and curriculum controller, fixed add curriculum chapter function

--- a/public/views/course/course-edit/template/profile.instructor.view.client.html
+++ b/public/views/course/course-edit/template/profile.instructor.view.client.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"" rel="stylesheet"/>
-    <link href="../../../css/course-landing/course-landing.css" rel="stylesheet"/>
+    <link href="../../../../css/course-landing/course-landing.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <title> Learning Aims</title>
 </head>
@@ -37,12 +37,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="general.html">
+                            <a href="../general.html">
                                 General
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="general.html">
+                            <a href="../general.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -51,13 +51,13 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="learningaims.html">
+                            <a href="../learningaims.html">
                                 Learning Aims
                             </a>
                         </div>
 
                         <div class="col-xs-1">
-                            <a href="learningaims.html">
+                            <a href="../learningaims.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -66,12 +66,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="requirements.html">
+                            <a href="../requirements.html">
                                 Requirement
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="requirements.html">
+                            <a href="../requirements.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -125,37 +125,19 @@
 
         <div class="col-md-8 ">
             <div class="col-xs-12 visible-xs">
-                <h3 class="yw-pageTitle">Curriculum</h3>
+                <h3 class="yw-pageTitle">Instrutor</h3>
             </div>
-            <label for="chapter">Chapter </label>
-            <input id="chapter"
+            <label for="name">Name </label>
+            <input id="name"
                    class="form-control"
                    value="Chapter 1"/>
-            <label for="description">Description </label>
-            <textarea id="description"
+            <label for="profile">Profile </label>
+            <textarea id="profile"
                       class="form-control"
                       ng-model="model.website.description"
-                      rows="6">Description</textarea>
+                      rows="6">Profile of the instructor</textarea>
             <a href="website-list.html" class="btn btn-block btn-success">Add</a>
             <a href="website-list.html" class="btn btn-block btn-danger">Delete</a>
-            <hr/>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse"
-                       data-parent="#accordion"
-                       href="#collapseOne"
-                       aria-expanded="true"
-                       aria-controls="collapseOne">
-                        Chapter2
-                    </a>
-                </div>
-
-                <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
         </div>
 
 
