--- a/public/views/course/course-edit/template/reviews.instructor.view.client.html
+++ b/public/views/course/course-edit/template/reviews.instructor.view.client.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"" rel="stylesheet"/>
-    <link href="../../../css/course-landing/course-landing.css" rel="stylesheet"/>
+    <link href="../../../../css/course-landing/course-landing.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <title> Learning Aims</title>
 </head>
@@ -37,12 +37,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="general.html">
+                            <a href="../general.html">
                                 General
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="general.html">
+                            <a href="../general.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -51,13 +51,13 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="learningaims.html">
+                            <a href="../learningaims.html">
                                 Learning Aims
                             </a>
                         </div>
 
                         <div class="col-xs-1">
-                            <a href="learningaims.html">
+                            <a href="../learningaims.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -66,12 +66,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="requirements.html">
+                            <a href="../requirements.html">
                                 Requirement
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="requirements.html">
+                            <a href="../requirements.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -125,17 +125,17 @@
 
         <div class="col-md-8 ">
             <div class="col-xs-12 visible-xs">
-                <h3 class="yw-pageTitle">Instrutor</h3>
+                <h3 class="yw-pageTitle">Reviews</h3>
             </div>
-            <label for="name">Name </label>
-            <input id="name"
+            <label for="reviewTitle">Title </label>
+            <input id="reviewTitle"
                    class="form-control"
-                   value="Chapter 1"/>
-            <label for="profile">Profile </label>
-            <textarea id="profile"
+                   value="Best Course Ever!"/>
+            <label for="reviewDetails">Reviews Details </label>
+            <textarea id="reviewDetails"
                       class="form-control"
-                      ng-model="model.website.description"
-                      rows="6">Profile of the instructor</textarea>
+                      ng-model="Reviews Details"
+                      rows="6">Perfect for students interested in web development.</textarea>
             <a href="website-list.html" class="btn btn-block btn-success">Add</a>
             <a href="website-list.html" class="btn btn-block btn-danger">Delete</a>
         </div>
