--- a/public/views/course/course-edit/template/curriculum.instructor.view.client.html
+++ b/public/views/course/course-edit/template/curriculum.instructor.view.client.html
@@ -65,13 +65,15 @@
                 <li ng-repeat="chapter in model.chapters"
                     class="list-group-item no-border">
                     <div class="row">
-                        <div class="col-xs-10">
+                        <div class="col-xs-11">
                             <h4>{{chapter.chapter}}</h4>
                             <div>{{chapter.description}}</div>
                         </div>
-                        <div class="col-xs-2">
+                        <div class="col-xs-1">
                             <a class="btn btn-block btn-danger"
-                               ng-click="model.deleteCurriculumItem(curriculum)">Delete</a>
+                               ng-click="model.deleteCurriculumItem(chapter._id)">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </a>
                         </div>
                     </div>
                 </li>
