--- a/public/views/course/course-edit/templates/learningaims-new.view.client.html
+++ b/public/views/course/course-edit/templates/learningaims-new.view.client.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"" rel="stylesheet"/>
-    <link href="../../../css/course-landing.css" rel="stylesheet"/>
-    <meta charset="UTF-8">
-    <title> Learning Aims</title>
-</head>
 
-<body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="row">
@@ -66,12 +57,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="requirements.html">
+                            <a href="#">
                                 Requirement
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="requirements.html">
+                            <a href="">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -124,8 +115,8 @@
 
 
         <div class="col-md-8 ">
-            <label for="Requirements">
-                Requirements
+            <label for="LearningAims1">
+                Learning Aims
             </label>
             <ul class="list-group">
                 <li class="list-group-item no-border">
@@ -195,8 +186,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value=""
-                                   type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -216,13 +206,9 @@
 
             </ul>
         </div>
-
-
-
     </div>
 </div>
 
-</body>
 
 
 
