--- a/public/views/course/course-edit/templates/requirements-list.view.client.html
+++ b/public/views/course/course-edit/templates/requirements-list.view.client.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"" rel="stylesheet"/>
-    <link href="../../../css/course-landing.css" rel="stylesheet"/>
-    <meta charset="UTF-8">
-    <title> Learning Aims</title>
-</head>
 
-<body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="row">
@@ -124,15 +115,15 @@
 
 
         <div class="col-md-8 ">
-            <label for="LearningAims1">
-                Learning Aims
+            <label for="Requirements">
+               Requirements
             </label>
             <ul class="list-group">
                 <li class="list-group-item no-border">
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                               value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="Have a computer with Internet" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -153,7 +144,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="Be ready to learn an insane amount of awesome stuff" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -174,7 +165,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="Prepare to build real web apps!" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -195,7 +186,8 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Make REAL web applications using cutting-edge technologies" type="class">
+                                   value="Brace yourself for stupid jokes about my dog Rusty"
+                                   type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -216,8 +208,8 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                    type="class"
-                                    placeholder="Please add new learning aims for this course">
+                                   type="class"
+                                   placeholder="Please add new requirement for this course">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -231,11 +223,13 @@
 
                 </li>
             </ul>
-            </div>
-    </div>
-</div>
+        </div>
 
-</body>
+
+
+        </div>
+    </div>
+
 
 
 
