--- a/public/views/course/course-edit/templates/learningaims-list.view.client.html
+++ b/public/views/course/course-edit/templates/learningaims-list.view.client.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"" rel="stylesheet"/>
-    <link href="../../../css/course-landing.css" rel="stylesheet"/>
-    <meta charset="UTF-8">
-    <title> Learning Aims</title>
-</head>
 
-<body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="row">
@@ -66,12 +57,12 @@
                 <li class="list-group-item boarder-none">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="#">
+                            <a href="requirements.html">
                                 Requirement
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="">
+                            <a href="requirements.html">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -132,7 +123,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="" type="class">
+                               value="Make REAL web applications using cutting-edge technologies" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -153,7 +144,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="" type="class">
+                                   value="Make REAL web applications using cutting-edge technologies" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -174,7 +165,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="" type="class">
+                                   value="Make REAL web applications using cutting-edge technologies" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -195,7 +186,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="" type="class">
+                                   value="Make REAL web applications using cutting-edge technologies" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -212,13 +203,30 @@
 
 
                 </li>
+                <li class="list-group-item no-border">
+                    <div class="row">
+                        <div class="col-xs-10">
+                            <input class="form-control"
+                                    type="class"
+                                    placeholder="Please add new learning aims for this course">
+                            </input>
+                        </div>
+                        <div class="col-xs-1">
+                            <span class="glyphicon glyphicon-plus   btn btn-primary"
+                                  aria-hidden="true">
+                            </span>
+                        </div>
 
+                    </div>
+
+
+                </li>
             </ul>
-        </div>
+            </div>
     </div>
 </div>
 
-</body>
+
 
 
 
