--- a/public/views/course/course-edit/templates/requirements-new.view.client.html
+++ b/public/views/course/course-edit/templates/requirements-new.view.client.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"" rel="stylesheet"/>
-    <link href="../../../css/course-landing.css" rel="stylesheet"/>
-    <meta charset="UTF-8">
-    <title> Learning Aims</title>
-</head>
 
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -125,14 +117,14 @@
 
         <div class="col-md-8 ">
             <label for="Requirements">
-               Requirements
+                Requirements
             </label>
             <ul class="list-group">
                 <li class="list-group-item no-border">
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Have a computer with Internet" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -153,7 +145,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Be ready to learn an insane amount of awesome stuff" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -174,7 +166,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Prepare to build real web apps!" type="class">
+                                   value="" type="class">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -195,7 +187,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Brace yourself for stupid jokes about my dog Rusty"
+                                   value=""
                                    type="class">
                             </input>
                         </div>
@@ -213,33 +205,15 @@
 
 
                 </li>
-                <li class="list-group-item no-border">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <input class="form-control"
-                                   type="class"
-                                   placeholder="Please add new requirement for this course">
-                            </input>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-plus   btn btn-primary"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
 
-                    </div>
-
-
-                </li>
             </ul>
         </div>
 
 
 
-        </div>
     </div>
+</div>
 
-</body>
 
 
 
