--- a/public/views/user/templates/register.view.client.html
+++ b/public/views/user/templates/register.view.client.html
@@ -39,7 +39,7 @@
         </div>
         <div class="col-sm-1 hidden-xs">
             <div class="navbar-header">
-                <a class="navbar-brand btn" href="#">Login</a>
+                <a class="navbar-brand btn" href="#/login">Login</a>
             </div>
         </div>
     </div>
